Fixed modal responsivness on smaller screen sizes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -149,3 +149,9 @@ code {
 .css-6hp17o-MuiList-root-MuiMenu-list {
   max-height: 200px;
 }
+
+@media only screen and (max-width: 600px) {
+  .modal-container form {
+    width: 400px;
+  }
+}
